feat: 全面升级 RPGCore 微架构 - Paper 1.21.6 + Adventure 4.26.1
🆕 新增服务:
- MiniMessage 颜色服务 (Adventure MiniMessage)
- Caffeine 缓存 (业界最佳)
- AsyncLogger 异步日志
- HttpClient HTTP 客户端 (OkHttp 4.12.0)
- CronScheduler 定时任务 (cron4j 2.2.5)
- AuditLog 审计日志
- DataExporter 数据导出
- ConfigMigrator 配置迁移
- TextDisplayService 全息显示
- AdventureBossBarService BossBar
- GameLogger 游戏日志
- RateLimiter 速率限制

🔄 变更:
- 异步调度器迁移到 Paper 1.21+ AsyncScheduler
- RPGCore.java 重构 - 完整服务初始化
- 依赖版本更新

🐛 修复:
- AsyncScheduler 迁移
- CronExpression 类不存在问题
- HttpClient shutdown 异常处理
- GuangDianArmorStats jdk.incubator.vector 编译问题

📚 文档:
- CHANGELOG.md 更新
- CHATCOLOR_MIGRATION_GUIDE.md